--- a/ReduxAndroidDemo/reduxlib/build.gradle
+++ b/ReduxAndroidDemo/reduxlib/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.wty.app.reduxandroiddemo"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -22,5 +21,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile project(":reduxlib")
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
